--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "2.4.3",
     "@react-navigation/bottom-tabs": "^6.5.0",
     "@react-navigation/native": "^6.1.0",
     "@react-navigation/native-stack": "^6.9.5",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.7",
+    "axios": "^1.4.0",
     "expo": "~47.0.8",
+    "expo-secure-store": "^12.1.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-double-tap": "^1.0.1",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
